--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"ip": "^1.1.5",
 		"react": "^17.0.1",
 		"react-bootstrap": "^1.4.0",
+		"react-checkbox-tree": "^1.6.0",
 		"react-dom": "^17.0.1",
+		"react-icons": "^4.1.0",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
